# ele

./: .env.example  .gitignore  =3.1  Dockerfile  README.md  pyproject.toml  render.yaml
ele/: __init__.py  config.py  types.py  utils.py
ele/api/: app.py
ele/billing/: __init__.py  admin.py  auth.py  config.py  db.py  models.py  routes.py  schemas.py  services.py  stripe_service.py
ele/cli/: main.py
ele/core/: __init__.py  clarity_upscale.py  degradation_analysis.py  pseudo_raw_reconstruction.py  restoration.py  scene_reconstruction.py  super_resolution.py  upscale.py
ele/export/: __init__.py  color_management.py  dng_export.py  tiff_export.py
ele/pipeline/: __init__.py  base.py  creator_pipeline.py  free_pipeline.py  print_pipeline.py  print_plus_pipeline.py  pro_pipeline.py
ele/web/: __init__.py  routes.py  scanner.py  schemas.py  services.py
storage/: ele.db
storage/tmp/: 01c78ffd4f464a.json  01d0406e4f1744.json  020e341e62ea4f.json  0231a0ac869c46.json  035bf7c717f840.json  04a3c1e3b2e34a.json  04e45f01ead944.json  0623ed2e4dd54d.json  077f5b87195b44.json  0e43cc69da954c.json  0f645e46796e48.json  10164dabb65e43.json  11a430650bff43.json  14f888435d0d4a.json  165dcb10d2d94d.json  16bfd682b61941.json  1c11ac9efdf34c.json  2258e95f322e4d.json  22f172219fd14f.json  243e1a279cb246.json  244b66a8840942.json  24c57750cfc846.json  25527dc42ae34b.json  257a71c59ccb4a.json  26e342ba7de542.json  27adf9ee9d2648.json  2aa29b78c07f4d.json  (+118 more)
tests/: test_access_control.py  test_billing.py  test_cli.py  test_pipeline.py  test_tiff_export.py  test_web.py
(+25 files in other folders)
